2009-10-11 Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSApplication.m: ([stopModalWithCode:]) correct the check to
	see if a modal session is running.  This fixes the breakage caused by
	the recent change sending -stopModal to invisible windows (like open
	panels ordered out at the end of their modal loop).

2009-10-11 Fred Kiefer <FredKiefer@gmx.de>

	* Source/GSStandardWindowDecorationView.m (-dealloc): Remove from
	the notification centre.

2009-10-10 Fred Kiefer <FredKiefer@gmx.de>

	* Source/GSStandardWindowDecorationView.m,
	* Headers/Additions/GNUstepGUI/GSTheme.h,
	* Source/GSThemeDrawing.m: Move all the window border drawing code
	into GSTheme.

2009-10-10 Fred Kiefer <FredKiefer@gmx.de>
	
	* Source/NSEvent.m, 
	* Source/NSImage.m,
	* Source/GSTextStorage.m: Remove usage of NSDeallocateObject.

2009-10-10 Fred Kiefer <FredKiefer@gmx.de>
	
	* Source/NSApplication.m (-endModalSession:): Bring the window of
	the next modal session to the front.
	* Source/NSApplication.m (-runModalSession:): Better check whether
	the current session window is gone.
	* Source/NSPrintPanel.m (-_pickedButton:): Remove bogus log statement.

2009-09-27 Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSImage.m: ([-setName:]) fix bug which was removing the	
	wrong name when given an image which already had a name.
	Make named images thread-safe using a lock.
	Add private method to update names on theme change.
	* Source/GSTheme.m: Use new method to update theme images.
	
2009-09-26 Fred Kiefer <FredKiefer@gmx.de>
	
	* Source/NSApplication.m (-setApplicationIconImage:,
	-finishLaunching): Move the set name code to finishLaunching, as
	the image called NSApplicationIcon should stay the same all the time.

2009-09-26 Fred Kiefer <FredKiefer@gmx.de>
	
	* Source/NSTextContainer.m (init):  Add this method as suggested
	by Derek Fawcus <dfawcus@cisco.com>.

2009-09-21 Fred Kiefer <FredKiefer@gmx.de>
	
	* Source/NSWindow.m (+standardWindowButton:forStyleMask:): Add